--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </h1>
 
 <!--- Inicio Productos -->
-<div class="products">
+<div class="productos">
    <div class="products">
         <div class="content">
             <div class="img-product">
@@ -89,7 +89,7 @@
 <!--- Fin de Caracteristicas -->
 <!--- Inicio Menciones -->
 <section>
-<div class="head_mencion">
+<div class="title_mencion">
   <h1>Menciones</h1>
 </div>
 <div class="menciones" >
