--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
     </div>
   </nav>  
    <!---Aqui acaba el navbar -->
-
 <div class="main_section">
     <h1>
-        Este es un producto increible.
+      Este es un producto increible, no se que haces viendo que lo puedes tener.
     </h1>
-
 <!--- Inicio Productos -->
 <div class="productos">
    <div class="products">
@@ -45,7 +43,7 @@
         <div class="img-product">
            <img src="images/box2.png" alt="">
            </div>
-           <h1>Producto 1</h1>
+           <h1>Producto 2</h1>
            <p>Miles de productos hay en el mercado...</p>
            <button href="#" class="main_button">Lo quiero</button>
      </div>
